--- a/stylesheet.css
+++ b/stylesheet.css
@@ -107,6 +107,7 @@ html {
 .menu-text-div {
 
 
+	z-index: 0;
 	position:fixed;
 	font-size: 200%;
 
@@ -367,8 +368,9 @@ html {
 
 .portfolio {
 
+	z-index: -1;
 	opacity: 0;
-	
+
 	position:absolute;
 
 	width:100%;
