--- a/stylesheet.css
+++ b/stylesheet.css
@@ -215,6 +215,7 @@ html {
 	position: fixed;
 	text-align: left;
 	transition: color 2s, opacity .4s;
+	color: #1D1D1D;
 	font-size: calc(10vw - 20px);
 	bottom: 40vh;
 	
@@ -593,13 +594,12 @@ div.portfolio{
 	height:5em;
 	
 
-
+	
 	margin-top: 0;
 	margin-left: 100px;
 	position: fixed;
 
-	transition: background 2s;
-	-webkit-transition: background 2s;
+
 	
 }
 
