--- a/404.css
+++ b/404.css
@@ -9,67 +9,73 @@ body {
 
 }
 
-.circle {
-    height: 0;
-    width: 0;
-    background-color: #DCDCDC;
 
+.door {
 
-    left: 50%;
+    left: 38vw;
     position: absolute;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    top: 37.5%;
+    background-color: #dcdcdc;
+    width: 400px;
+
+    border: 0 inset rgba(231, 231, 210, 0.65);
+
     
-    border-radius: 50%;
-    display: inline-block;
 
-    animation: circle 2s 0.2s forwards;
-    box-shadow: inset  0 0 60px 60px #212121;
+    animation: door 1s 0.5s forwards cubic-bezier(.99,.03,.38,.76);
+}
 
+@keyframes door {
+    0% {
+        border-width: 0px;
+        height: 0;
+    }
+    100% {
+        border-width: 20px;
+        height: 225px;
+    }
 }
 
 
-
 .circle_text{
-    left: 50%;
+
+    left: 40vw;
     position: absolute;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    top: 35%;
+
     font-size: 200px;
     font-family: "Segoe-UI-Variable", sans-serif;
     color: #1D1D1D;
 
+    width: 0%;
+    overflow: hidden;
+    animation: text_intro 1s 1.5s steps(3) forwards;
+
 }
 
-@keyframes circle{
+.circle_text a{
+
+    font-family: "Segoe-UI-Variable", sans-serif;
+    color: #1D1D1D;
+    text-decoration: none;
+
+}
+
+@keyframes blink{
     0% {
-        left: 0px;
-        width: 0px;
-        height: 0px;
-        top: 0px;
-    }
-    30%{
-        left: 40%;
-        top: 20%;
-        width: 22vw;
-        height: 22vw;
-    }
-    50% {
-        left: 10%;
-        top: 60%;
-        width: 50vw;
-        height: 50vw;
-    }
-    80% {
-        left: 90%;
-        top: 20%;
-        width: 50vw;
-        height: 50vw;
+        opacity: 100;
     }
     100% {
-        width: 40vw;
-        height: 40vw;
+        opacity: 0;
     }
 }
 
+@keyframes text_intro{
+    0% {
+        width: 0%;
+    }
+    100% {
+        width: 350px;
 
+    }
+}
